fix drag on mobile devices

--- a/src/components/Folder.css
+++ b/src/components/Folder.css
@@ -2,6 +2,7 @@
     position: absolute;
     width: 90%;
     top: -20px;
+    touch-action: none;
 }
 
 .top-folder > .folder-name {
